Commit best and worst routes for on time percentages

--- a/via_time.ipynb
+++ b/via_time.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Data-Dictionary\" data-toc-modified-id=\"Data-Dictionary-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Data Dictionary</a></span></li><li><span><a href=\"#Acquire-df\" data-toc-modified-id=\"Acquire-df-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Acquire df</a></span><ul class=\"toc-item\"><li><span><a href=\"#DF-Info\" data-toc-modified-id=\"DF-Info-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>DF Info</a></span></li></ul></li><li><span><a href=\"#Prepare-df\" data-toc-modified-id=\"Prepare-df-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Prepare df</a></span><ul class=\"toc-item\"><li><span><a href=\"#Rename-Columns\" data-toc-modified-id=\"Rename-Columns-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Rename Columns</a></span></li><li><span><a href=\"#Convert-date-column-to-datetime-format\" data-toc-modified-id=\"Convert-date-column-to-datetime-format-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Convert date column to datetime format</a></span></li><li><span><a href=\"#Create-Date-Part-Columns\" data-toc-modified-id=\"Create-Date-Part-Columns-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Create Date Part Columns</a></span></li><li><span><a href=\"#Unique-Values-in-Columns\" data-toc-modified-id=\"Unique-Values-in-Columns-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Unique Values in Columns</a></span></li><li><span><a href=\"#Missing-Scheduled-Time-Points\" data-toc-modified-id=\"Missing-Scheduled-Time-Points-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Missing Scheduled Time Points</a></span></li><li><span><a href=\"#On-Time-Percentage\" data-toc-modified-id=\"On-Time-Percentage-3.6\"><span class=\"toc-item-num\">3.6&nbsp;&nbsp;</span>On Time Percentage</a></span></li><li><span><a href=\"#There-are-2-Primo-routes-in-the-dataset\" data-toc-modified-id=\"There-are-2-Primo-routes-in-the-dataset-3.7\"><span class=\"toc-item-num\">3.7&nbsp;&nbsp;</span>There are 2 Primo routes in the dataset</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Data-Dictionary\" data-toc-modified-id=\"Data-Dictionary-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Data Dictionary</a></span></li><li><span><a href=\"#Acquire-df\" data-toc-modified-id=\"Acquire-df-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Acquire df</a></span><ul class=\"toc-item\"><li><span><a href=\"#DF-Info\" data-toc-modified-id=\"DF-Info-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>DF Info</a></span></li></ul></li><li><span><a href=\"#Prepare-df\" data-toc-modified-id=\"Prepare-df-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Prepare df</a></span><ul class=\"toc-item\"><li><span><a href=\"#Rename-Columns\" data-toc-modified-id=\"Rename-Columns-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Rename Columns</a></span></li><li><span><a href=\"#Convert-date-column-to-datetime-format\" data-toc-modified-id=\"Convert-date-column-to-datetime-format-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Convert date column to datetime format</a></span></li><li><span><a href=\"#Create-Date-Part-Columns\" data-toc-modified-id=\"Create-Date-Part-Columns-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Create Date Part Columns</a></span></li><li><span><a href=\"#Unique-Values-in-Columns\" data-toc-modified-id=\"Unique-Values-in-Columns-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Unique Values in Columns</a></span></li><li><span><a href=\"#Missing-Scheduled-Time-Points\" data-toc-modified-id=\"Missing-Scheduled-Time-Points-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Missing Scheduled Time Points</a></span></li><li><span><a href=\"#On-Time-Percentage\" data-toc-modified-id=\"On-Time-Percentage-3.6\"><span class=\"toc-item-num\">3.6&nbsp;&nbsp;</span>On Time Percentage</a></span></li><li><span><a href=\"#There-are-2-Primo-routes-in-the-dataset\" data-toc-modified-id=\"There-are-2-Primo-routes-in-the-dataset-3.7\"><span class=\"toc-item-num\">3.7&nbsp;&nbsp;</span>There are 2 Primo routes in the dataset</a></span></li><li><span><a href=\"#Groupby-route_name\" data-toc-modified-id=\"Groupby-route_name-3.8\"><span class=\"toc-item-num\">3.8&nbsp;&nbsp;</span>Groupby <code>route_name</code></a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -1023,9 +1023,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "STONE OAK/DOWNTOWN Express      31\n",
+       "NWVISTAS/UNIVERSITY P&R          5\n",
+       "DECO DISTRICT / CASTLE HILLS     4\n",
+       "VIVA MISSIONS                    3\n",
+       "RANDOLPH/KIRBY/SUNRISE           1\n",
+       "IH-35 S Express                  1\n",
+       "7 STONEOAK/DOWNTOWN EXPRESS      1\n",
+       "INGRAM/NWVISTAS                  1\n",
+       "Deco District / Castle Hills     1\n",
+       "SUNRISE/SUMMERFEST               1\n",
+       "VALLEY FORGE                     1\n",
+       "LOOPER Skip                      1\n",
+       "Industry Park                    1\n",
+       "INGRAM/WESTLAKES                 1\n",
+       "US-281 Express                   1\n",
+       "LAREDO                           1\n",
+       "Name: route_name, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "time[time.otp < 35].route_name.value_counts()"
    ]
@@ -1039,11 +1066,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Primo / Fredericksburg Road    24\n",
+       "Primo / Zarzamora              24\n",
+       "Name: route_name, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "time[time.route_name.str.contains('Primo')].route_name.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Groupby `route_name`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>route</th>\n",
+       "      <th>route_name</th>\n",
+       "      <th>early_departure</th>\n",
+       "      <th>on_time</th>\n",
+       "      <th>late_arrival</th>\n",
+       "      <th>missing</th>\n",
+       "      <th>time_point_count</th>\n",
+       "      <th>otp</th>\n",
+       "      <th>average_dwell_time</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>BLANCO</td>\n",
+       "      <td>23</td>\n",
+       "      <td>373</td>\n",
+       "      <td>65</td>\n",
+       "      <td>59</td>\n",
+       "      <td>461</td>\n",
+       "      <td>80.91</td>\n",
+       "      <td>112.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date  route route_name  early_departure  on_time  late_arrival  \\\n",
+       "0 2018-01-01      2     BLANCO               23      373            65   \n",
+       "\n",
+       "   missing  time_point_count    otp  average_dwell_time  month  year     day  \n",
+       "0       59               461  80.91               112.4      1  2018  Monday  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>otp</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>route_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>TAMUSA / Madla Transit Center</th>\n",
+       "      <td>95.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>INGRAM/MAINLAND</th>\n",
+       "      <td>94.440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ingram / Mainland</th>\n",
+       "      <td>94.275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kel-Lac / Westlakes</th>\n",
+       "      <td>93.835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Valley-Hi / Kel-Lac</th>\n",
+       "      <td>93.215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>611-VALLEY HI</th>\n",
+       "      <td>93.090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>642 Nacogdoches / Rolling Oaks Mall</th>\n",
+       "      <td>92.820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100 - PRIMO FREDRICKSBURG RD.</th>\n",
+       "      <td>92.790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JBSA EXPRESS FT. SAM HOUSTON / USO</th>\n",
+       "      <td>92.725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>617-RAINBOW HILLS</th>\n",
+       "      <td>92.625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>502-THOUSAND OAKS</th>\n",
+       "      <td>92.625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Basse</th>\n",
+       "      <td>92.550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GUADALUPE Frequent</th>\n",
+       "      <td>92.290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Primo / Zarzamora</th>\n",
+       "      <td>92.230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609-INGRAM/MAINLAND</th>\n",
+       "      <td>92.075</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         otp\n",
+       "route_name                                  \n",
+       "TAMUSA / Madla Transit Center         95.000\n",
+       "INGRAM/MAINLAND                       94.440\n",
+       "Ingram / Mainland                     94.275\n",
+       "Kel-Lac / Westlakes                   93.835\n",
+       "Valley-Hi / Kel-Lac                   93.215\n",
+       "611-VALLEY HI                         93.090\n",
+       "642 Nacogdoches / Rolling Oaks Mall   92.820\n",
+       "100 - PRIMO FREDRICKSBURG RD.         92.790\n",
+       "JBSA EXPRESS FT. SAM HOUSTON / USO    92.725\n",
+       "617-RAINBOW HILLS                     92.625\n",
+       "502-THOUSAND OAKS                     92.625\n",
+       "Basse                                 92.550\n",
+       "GUADALUPE Frequent                    92.290\n",
+       "Primo / Zarzamora                     92.230\n",
+       "609-INGRAM/MAINLAND                   92.075"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Top 15 BEST on time percentage\n",
+    "\n",
+    "df.groupby('route_name')[['otp']].median().sort_values('otp', ascending=False).head(15)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>otp</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>route_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>STONE OAK/DOWNTOWN Express</th>\n",
+       "      <td>55.795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stone Oak Express</th>\n",
+       "      <td>59.720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7 STONEOAK/DOWNTOWN EXPRESS</th>\n",
+       "      <td>61.290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97-WEST AVENUE</th>\n",
+       "      <td>62.510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-EAST COMMERCE</th>\n",
+       "      <td>62.680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WEST AVE</th>\n",
+       "      <td>63.215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NWVISTAS/UNIVERSITY P&amp;R</th>\n",
+       "      <td>64.645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>618-INGRAM/WESTLAKES</th>\n",
+       "      <td>65.455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West Avenue</th>\n",
+       "      <td>66.265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NW Vista College / University P&amp;R</th>\n",
+       "      <td>66.670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88-BANDERA</th>\n",
+       "      <td>66.735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>US 90 Express</th>\n",
+       "      <td>67.655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70   CESAR CHAVEZ</th>\n",
+       "      <td>68.970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NWVISTAS/UNIVESITY P&amp;R</th>\n",
+       "      <td>69.110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660-UNIV P&amp;R / NW VISTA</th>\n",
+       "      <td>69.330</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         otp\n",
+       "route_name                                  \n",
+       "STONE OAK/DOWNTOWN Express            55.795\n",
+       "Stone Oak Express                     59.720\n",
+       "7 STONEOAK/DOWNTOWN EXPRESS           61.290\n",
+       "97-WEST AVENUE                        62.510\n",
+       "25-EAST COMMERCE                      62.680\n",
+       "WEST AVE                              63.215\n",
+       "NWVISTAS/UNIVERSITY P&R               64.645\n",
+       "618-INGRAM/WESTLAKES                  65.455\n",
+       "West Avenue                           66.265\n",
+       "NW Vista College / University P&R     66.670\n",
+       "88-BANDERA                            66.735\n",
+       "US 90 Express                         67.655\n",
+       "70   CESAR CHAVEZ                     68.970\n",
+       "NWVISTAS/UNIVESITY P&R                69.110\n",
+       "660-UNIV P&R / NW VISTA               69.330"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Top 15 worst on time percentage\n",
+    "\n",
+    "df.groupby('route_name')[['otp']].median().sort_values('otp').head(15)\n"
    ]
   },
   {
