Commit code comment updates in via notebook

--- a/sql_intro.ipynb
+++ b/sql_intro.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction-to-SQL\" data-toc-modified-id=\"Introduction-to-SQL-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction to SQL</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#What-are-SQL-and-MySQL?\" data-toc-modified-id=\"What-are-SQL-and-MySQL?-1.0.1\"><span class=\"toc-item-num\">1.0.1&nbsp;&nbsp;</span><strong><font color=\"red\">What are SQL and MySQL?</font></strong></a></span></li><li><span><a href=\"#So-What-Makes-Tables-in-a-Database-Relational?\" data-toc-modified-id=\"So-What-Makes-Tables-in-a-Database-Relational?-1.0.2\"><span class=\"toc-item-num\">1.0.2&nbsp;&nbsp;</span><strong><font color=\"orange\">So What Makes Tables in a Database Relational?</font></strong></a></span></li><li><span><a href=\"#Now-What?\" data-toc-modified-id=\"Now-What?-1.0.3\"><span class=\"toc-item-num\">1.0.3&nbsp;&nbsp;</span><strong><font color=\"gree\">Now What?</font></strong></a></span></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction-to-SQL\" data-toc-modified-id=\"Introduction-to-SQL-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction to SQL</a></span><ul class=\"toc-item\"><li><span><a href=\"#What-are-SQL-and-MySQL?\" data-toc-modified-id=\"What-are-SQL-and-MySQL?-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span><strong><font color=\"red\">What are SQL and MySQL?</font></strong></a></span></li><li><span><a href=\"#So-What-Makes-Tables-in-a-Database-Relational?\" data-toc-modified-id=\"So-What-Makes-Tables-in-a-Database-Relational?-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span><strong><font color=\"orange\">So What Makes Tables in a Database Relational?</font></strong></a></span></li><li><span><a href=\"#Now-What?\" data-toc-modified-id=\"Now-What?-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span><strong><font color=\"gree\">Now What?</font></strong></a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -16,7 +16,7 @@
    "source": [
     "## Introduction to SQL\n",
     "\n",
-    "#### **<font color=red>What are SQL and MySQL?</font>**\n",
+    "### **<font color=red>What are SQL and MySQL?</font>**\n",
     "\n",
     "**SQL**, *Structured Query Language*, is a computer language that allows you to communicate with databases. \n",
     "\n",
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **<font color=orange>So What Makes Tables in a Database Relational?</font>**\n",
+    "### **<font color=orange>So What Makes Tables in a Database Relational?</font>**\n",
     "\n",
     "**A Primary Key** is the **unique identifier** for a record in a table. You cannot have a Null value in the primary key column, nor can any two records share the same value in this field.\n",
     "\n",
@@ -60,9 +60,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **<font color=gree>Now What?</font>**\n",
+    "### **<font color=gree>Now What?</font>**\n",
     "\n",
-    "**Use the following commands to inspect information about available databases and tables.\n",
+    "**Use the following commands to inspect information about available databases and tables.**\n",
     "\n",
     "```sql\n",
     "SHOW DATABASES;\n",
@@ -84,7 +84,9 @@
     "DESCRIBE table_name;\n",
     "```\n",
     "\n",
-    "```sql"
+    "```sql\n",
+    "SHOW CREATE TABLE table_name;\n",
+    "```"
    ]
   },
   {
