--- a/via_time.ipynb
+++ b/via_time.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "4           31        6             282  80.14            107.16  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "(35331, 10)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "max       1385.000000    100.000000       1166.200000  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "2018-01-01  Monday  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "[196 rows x 1 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
        "Name: missing, dtype: int64"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
        "Name: 21060, dtype: object"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
        "Name: 21004, dtype: object"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
        "Name: 20876, dtype: object"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
        "Name: 33188, dtype: object"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
        "Name: 855, dtype: object"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,12 +1178,12 @@
    "source": [
     "### On Time Percentage\n",
     "\n",
-    "Routes with issues making it to stops at scheduled times."
+    "Peek at routes with best and worst ontime percentages."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1201,29 +1201,31 @@
        "basse                                  35\n",
        "sky harbour/kellac                     33\n",
        "heritage nw / kellac                   32\n",
-       "ih35 express                           29\n",
        "jbsa express ft. sam houston / uso     29\n",
-       "north star / harry wurzbach            28\n",
+       "ih35 express                           29\n",
        "ih35 s express                         28\n",
+       "north star / harry wurzbach            28\n",
        "medical center/alamo ranch             24\n",
        "fredericksburg rd                      23\n",
        "hays frequent                          20\n",
-       "thousand oaks                          18\n",
+       "medical center / ingram                18\n",
        "Name: route_name, dtype: int64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Routes making it to stops at scheduled times more than 95% of the time.\n",
+    "\n",
     "time[time.otp > 95].route_name.value_counts().head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1233,26 +1235,28 @@
        "nwvistas/university p&r          5\n",
        "deco district / castle hills     5\n",
        "viva missions                    3\n",
-       "randolph/kirby/sunrise           1\n",
-       "ingram/nwvistas                  1\n",
-       "stoneoak/downtown express        1\n",
-       "ih35 s express                   1\n",
-       "sunrise/summerfest               1\n",
-       "laredo                           1\n",
        "ingram/westlakes                 1\n",
+       "randolph/kirby/sunrise           1\n",
+       "laredo                           1\n",
        "looper skip                      1\n",
        "valley forge                     1\n",
        "us281 express                    1\n",
+       "stoneoak/downtown express        1\n",
+       "ingram/nwvistas                  1\n",
        "industry park                    1\n",
+       "ih35 s express                   1\n",
+       "sunrise/summerfest               1\n",
        "Name: route_name, dtype: int64"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Routes with issues making it to stops at scheduled times, less than 35% of the time.\n",
+    "\n",
     "time[time.otp < 35].route_name.value_counts()"
    ]
   },
@@ -1260,12 +1264,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### There are 4 Primo routes in the dataset? Man, Fredricksburg primo has 3 different names for Primo route!"
+    "### There are 4 Primo routes in the dataset? Man, Fredricksburg primo has 3 different names for Primo route!\n",
+    "\n",
+    "It's becoming obvious that route_name needs to be normalized, so the routes match the names. There are different names in the dataset for the same routes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1285,7 @@
        "Name: route_name, dtype: int64"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1371,7 @@
        "0       59               461  80.91               112.4      1  2018  Monday  "
       ]
      },
-     "execution_count": 191,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1703,7 @@
        "[97 rows x 16 columns]"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1710,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1832,7 @@
        "522    88.250"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1910,18 +1916,20 @@
        "33229               72.52      1  2019  Monday  "
       ]
      },
-     "execution_count": 200,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Route with best median on time percentage\n",
+    "\n",
     "df[df.route == 672].head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2045,7 @@
        "520    74.360"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2050,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +2129,7 @@
        "616      1  2018  Monday  "
       ]
      },
-     "execution_count": 201,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2132,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2200,7 +2208,7 @@
        "45       10               296  83.78               45.43      1  2018  Monday  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
